[tool.poetry]
name = "cogni-graph"
version = "0.1.0"
description = "Stateful long-term memory engine for LLM agents using hybrid vector-graph consolidation and hierarchical entity-relation extraction."
authors = ["Claude Code <claude@anthropic.com>"]
readme = "README.md"
packages = [{include = "cognigraph"}]

[tool.poetry.scripts]
cognigraph = "cognigraph.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
networkx = "^3.2.1"
numpy = "^1.26.4"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
httpx = "^0.27.0"
instructor = "^1.3.0"
openai = "^1.12.0"
neo4j = "^5.18.0"
chromadb = "^0.4.24"
qdrant-client = "^1.8.0"
langgraph = "^0.2.39"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
split_build = true
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "ERA", "RUF"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]
